modified:   src/layouts/Layout.astro

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,6 +29,7 @@ const siteUrl = import.meta.env.SITE_URL || 'https://your-site-url.com';
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content={description} />
     <meta name="twitter:image" content={ogImage} />
+    <meta name="msvalidate.01" content="837ADF036608F017D591091E96AD9F9C" />
     <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
